--- a/tutorials/R/AOP/AOP-L3-rasters/aop_merge_rasters.Rmd
+++ b/tutorials/R/AOP/AOP-L3-rasters/aop_merge_rasters.Rmd
@@ -6,10 +6,10 @@ dateCreated: 2022-07-14
 authors: Bridget Hass
 contributors: 
 estimatedTime: 30 - 45 Minutes
-packagesLibraries: neonUtilities, raster, gdalUtilities, data.table, docstring
-topics: AOP, remote-sensing, hyperspectral, lidar, camera, raster, geotiff, gee
+packagesLibraries: neonUtilities, terra, data.table, docstring
+topics: AOP, remote-sensing, hyperspectral, lidar, raster, geotiff, cloud-optimized-geotiff, Google Earth Engine (GEE)
 languagesTool: R
-dataProducts: DP3.30010.001, DP3.30011.001, DP3.30012.001, DP3.30014.001, DP3.30015.001, DP3.30019.001, DP3.30024.001, DP3.30025.001, DP3.30026.001
+dataProducts: DP3.30011.001, DP3.30012.001, DP3.30014.001, DP3.30015.001, DP3.30019.001, DP3.30024.001, DP3.30025.001, DP3.30026.001
 code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/AOP/AOP-L3-rasters/aop_merge_raster_functions.R
 code2: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/AOP/AOP-L3-rasters/aop_merge_rasters.Rmd
 tutorialSeries:
@@ -49,8 +49,7 @@ To complete this tutorial you will need
 
 ### R Libraries to Install:
 * **neonUtilities**: `install.packages('neonUtilities')`
-* **gdalUtilities**: `install.packages('gdalUtilities')`
-* **raster**: `install.packages('raster')`
+* **terra**: `install.packages('terra')`
 * **data.table**: `install.packages('data.table')`
 * **docstring**: `install.packages('docstring')`
 
@@ -65,7 +64,7 @@ the aop_merge_raster_functions.R script (code can be downloaded at the bottom of
 You will need to modify the working directory path in this tutorial to match your 
 local directory structure.
 
-<a href="https://www.neonscience.org/set-working-directory-r" target="_blank"> An overview
+<a href="https://www.neonscience.org/set-working-directory-r" target="_blank">An overview
 of setting the working directory in R can be found here.</a>
 
 ### Recommended Skills
@@ -73,17 +72,23 @@ of setting the working directory in R can be found here.</a>
 For this tutorial you should be familiar with AOP data, and raster geotiff data generally. 
 You should also be familiar with the `neonUtilities` R package for downloading NEON data.
 
+If you have not used a NEON token for downloading data, we recommend you review
+the tutorial <a href="https://www.neonscience.org/resources/learning-hub/tutorials/neon-api-tokens-tutorial" 
+target="_blank">Using an API Token when Accessing NEON Data with neonUtilities</a>.
+
 ### AOP Raster Data 
 
-The function `makeFullSiteMosaics` is set up for downloading AOP L3 raster data 
-products. The table below shows a full list of these data products, including the 
-sensor, data product ID (dpID), the sub-directory structure where files are downloaded to 
-(the neonUtilities function preserves the original folder structure of the data 
-as it is stored by NEON), and the name of the files. `neonUtilities` prints out 
-the full path where data and metadata are downloaded, but the script 
-`aop_mosaic_rasters.R` used in this tutorial goes a step further, and automatically 
-finds the path where data is downloaded, and handles some additional data wrangling 
-in order to simplify pre-processing.
+The function `makeFullSiteMosaics` is set up for downloading AOP L3 lidar and 
+spectrometer derived raster data products. The table below shows a full list of 
+these data products, including the sensor, data product ID (dpID), the 
+sub-directory structure where files are downloaded to (the neonUtilities 
+function preserves the original folder structure of the data as it is stored by 
+NEON on Google Cloud Storage), and the name of the files. `neonUtilities` prints 
+out the full path where data and metadata are downloaded, but the script 
+`aop_mosaic_rasters.R` used in this tutorial goes a step further, and 
+automatically finds the path where data is downloaded, and handles some 
+additional data management (such as unzipping zipped folders) in order to 
+simplify pre-processing.
 
 Refer to this table when using the function. If you select a dpID that is not in 
 this list, the function will error out and display a table with the valid dpIDs, 
@@ -91,7 +96,6 @@ this list, the function will error out and display a table with the valid dpIDs,
 
 | Sensor       | Data Product ID | Download Path                          | Short Name        |
 |--------------|-----------------|----------------------------------------|-------------------|
-| Camera       | DP3.30010.001   | L3/Camera/Mosaic                       | image             |
 | Lidar        | DP3.30024.001   | L3/DiscreteLidar/DTMGtif               | DTM               |
 | Lidar        | DP3.30024.001   | L3/DiscreteLidar/DSMGtif               | DSM               |
 | Lidar        | DP3.30015.001   | L3/DiscreteLidar/CanopyHeightModelGtif | CHM               |
@@ -117,26 +121,15 @@ setwd(wd)
 
 First let's use `source` to pull in the `aop_merge_raster_functions.R` script, which is located in the working directory. For more details on what `source` does, please refer to the <a href="https://www.earthdatascience.org/courses/earth-analytics/multispectral-remote-sensing-data/source-function-in-R/" target="_blank"> CU Earth Lab Tutorial on Source Functions in R</a>
 
-```{r source-aop-mosaic-rasters,message=FALSE,warning=FALSE}
-source("./aop_merge_raster_functions.R")
+```{r source-aop-mosaic-rasters, message=FALSE, warning=FALSE}
+source("aop_merge_raster_functions.R")
 ```
 
-Let's take a look a the documentation for the function `makeFullSiteMosaics`
-
-```{r help-makeFullSiteMosaics,eval=F}
-help(makeFullSiteMosaics)
-```
-You should see the function documentation pop up in the *RStudio Help* window, similar to below:
-
-
-### makeFullSiteMosaics 
-{TempPackage}	R Documentation
-
-Download all AOP files for a given site, year, and L3 product, mosaic the files, and save the full site mosaic to a tiff and cloud-optimized geotiff.
+Let's take a look at the input parameters for the function `makeFullSiteMosaics`. If you start to type this function in R, it should show you the required (and optional inputs). Below is some more detailed information about this function:
 
 #### Description    
 
-This function 1) Runs the neonUtilities byFileAOP function to download NEON AOP data by site, year, and product (see byFileAOP documention for additional details). 2) mosaics the data product tiles into a full-site mosaic, as well as the associated error tifs, where applicable, and 3) saves the full site mosaics to a tif and cloud-optimized geotiff.
+This function 1) Runs the neonUtilities byFileAOP function to download NEON AOP data by site, year, and product (see byFileAOP documentation for additional details). 2) mosaics the data product tiles into a full-site mosaic, as well as the associated error tifs, where applicable, and 3) saves the full site mosaics to a tif and optional cloud-optimized geotiff.
 
 #### Usage
 
@@ -146,13 +139,15 @@ makeFullSiteMosaics(
   siteCode,
   dataRootDir,
   outFileDir,
-  apiToken = NULL)   
+  include.provisional = T,
+  apiToken = NULL,
+  COG = T)   
 
 #### Arguments
 
 ##### dpID
 
-The identifier of the AOP data product to download, in the form DP3.PRNUM.REV, e.g. DP3.30011.001. This works for all AOP L3 rasters except L3            reflectance. If an invalid data product ID is provided, the code will show an error message and display the valid dpIDs.
+The identifier of the AOP data product to download, in the form DP3.PRNUM.REV, e.g. DP3.30011.001. This works for all AOP L3 rasters except L3 reflectance. If an invalid data product ID is provided, the code will show an error message and display the valid dpIDs.
 
 ##### year
 
@@ -170,31 +165,47 @@ The file path to download data to.
 
 The file path where the full-site mosaic geotiffs and cloud-optimized geotiffs are saved.
 
+##### include.provisional 
+
+T or F, should provisional data be included in downloaded files? Defaults to F. See https://www.neonscience.org/data-samples/data-management/data-revisions-releases for details on the difference between provisional and released data.
+
 ##### apiToken
 
 User specific API token (generated within neon.datascience user accounts). If not provided, no API token is used.
 
+##### COG 
 
-*TIP*: We recommend using an API token when downloading NEON data programmatically. The function will work without a token, if you leave it out (as described in the documentation), but it is best to get in the practice of using the token! Here I source the token from a file, where the file consists of a single line of code defining the token (called NEON_TOKEN). To set up an API token, please refer to the R tutorial on generating tokens, linked in the requirements section at the beginning of this lesson. 
+T or F, generate a Cloud Optimized Geotiff (COG) in addition to a geotiff? Defaults to F.
+
+
+<div id="ds-dataTip" markdown="1">
+
+
+**Data Tip**: We recommend using an API token when downloading NEON data programmatically. The function will work without a token, if you leave it out (as described in the documentation), but it is best to get in the practice of using the token! Here I source the token from a file, where the file consists of a single line of code defining the token (called NEON_TOKEN). To set up an API token, please refer to the R tutorial on generating tokens, linked in the Recommended SKills section at the beginning of this lesson. 
+
+</div>
+
+You can set the token as follows, directly in R, replacing "MY TOKEN" with your unique token.
 
 ```{r display-neon-token-file,eval=F}
 NEON_TOKEN <- "MY TOKEN"
 ```
 
-We can read in the token using the source function as follows. This assumes the token is saved in the working directory, but you can also set the path to the token explicitly if you've saved it elsewhere.
+You can read in the token that is saved as `neon_token.R` using the source function as follows. This assumes the token is saved in the working directory, but you can also set the path to the token explicitly if you've saved it elsewhere.
 
 ```{r source-api-token,message=FALSE,warning=FALSE}
 source(paste0(wd,"/neon_token.R"))
 ```
 
-Now that we have a general idea of how this function works, from the documentation, let's go ahead and run it, including the imported token.
-For this example, I set the download folder to 'c:/neon/data' and the output folder to 'c:/neon/outputs/2021_MCRA/CHM/'. Modify these paths as desired according to your project structure.
+Now that we have a general idea of how this function works, and have set the API TOKEN, let's go ahead and run the function. 
+
+For this example, the download folder is set to 'c:/neon/data' and the output folder to 'c:/neon/outputs/2021_MCRA/CHM/'. Modify these paths as desired according to your project structure.
 
 Please heed the following warnings before you run the code:
 
 WARNING: This function is currently set so that it does not check the file size before downloading. You can change this, if desired, by either removing the `check.size` parameter in the the `makeFullSiteMosaics` function, or by changing the value for that setting to True (`check.size=T`). This will pause the function and prompt you to type y/n (yes or no) to continue with the download. We recommend changing this parameter if you have limited storage space on your computer, but note that doing so will require a manual input to complete the execution of the function.
 
-WARNING: We recommend extending the timeout value when downloading large AOP sites so the connection doesn't stall out before the files finishe downloading. To change this setting, you can the R `options`, but note that this will change the computer's settings outside of this R environment. When you do set the timeout, be sure to change it back at the end. The default timeout is 60 seconds, we recommend changing it to 300 seconds (5 minutes).
+WARNING: We recommend extending the timeout value when downloading large AOP sites so the connection doesn't stall out before the files finished downloading. To change this setting, you can the R `options`, but note that this will change the computer's settings outside of this R environment. If you do re-set the timeout, be sure to change it back at the end. The default timeout is 60 seconds, we recommend changing it to 300 seconds (5 minutes).
 
 ```{r get-timeout}
 timeout0 <- getOption('timeout')
@@ -215,8 +226,11 @@ download_folder <- 'c:/neon/data'
 chm_output_folder <- 'c:/neon/outputs/2021_MCRA/CHM/'
 ```
 
+Now we're ready to run the `makeFullSiteMosaics` function. We will set `include.provisional=T` to include provisional data (by default it is set to False). That shouldn't matter in this case because the 2021 MCRA data is part of a Release. For more information on provisional v. released data, please refer to the tutorial: 
+<a href="https://www.neonscience.org/resources/learning-hub/tutorials/release-provisional-tutorial" target="_blank">Understanding Releases and Provisional Data</a>
+
 ```{r run-mcra-2021-chm,eval=T,results=FALSE,message=FALSE,warning=FALSE}
-makeFullSiteMosaics('DP3.30015.001','2021','MCRA',download_folder,chm_output_folder,NEON_TOKEN)
+makeFullSiteMosaics('DP3.30015.001','2021','MCRA',download_folder,chm_output_folder,NEON_TOKEN,include.provisional=T,COG=T)
 ```
 
 Display the output files generated:
@@ -228,17 +242,16 @@ list.files(chm_output_folder)
 Now we can read in and plot the full-site CHM tif that we generated using the raster package:
 
 ```{r plot-chm-full-mosaic,message=FALSE,warning=FALSE}
-MCRA_CHM <- raster(file.path(chm_output_folder,'2021_MCRA_2_CHM.tif'))
+MCRA_CHM <- rast(file.path(chm_output_folder,'2021_MCRA_2_CHM.tif'))
 plot(MCRA_CHM,main="2021_MCRA_2 Canopy Height Model") # add title with main)
 ```
 
 Now let's run the function to generate full-site mosaics for the AOP Veg Indices (DP3.30026.001). The function handles unzipping the zipped folders, and plotting each separate index tif and associated error tif. We will use the same download folder as before (note that the files will be downloaded to a different sub-directory), and specify a new output folder.
 
-```{r set-veg-indices-output-folder}
-veg_indices_output_folder<-'c:/neon/outputs/2021_MCRA/VegIndices/'
-```
+Now we will run `makeFullSiteMosaics` again. This time leave out the `include.provisional` parameter, since it is set to False by default. This time we'll leave the defaults for `include.provisional` and COG, so COGs will not be generated.
 
 ```{r run-mcra-2021-veg-indices,eval=T,results=FALSE,message=FALSE,warning=FALSE}
+veg_indices_output_folder<-'c:/neon/outputs/2021_MCRA/VegIndices/'
 makeFullSiteMosaics('DP3.30026.001','2021','MCRA',download_folder,veg_indices_output_folder,NEON_TOKEN)
 ```
 
@@ -250,8 +263,8 @@ list.files(veg_indices_output_folder)
 
 Now we can read in the NDVI and NDVI error tifs:
 ```{r read-ndvi-full-mosaics,message=FALSE,warning=FALSE}
-MCRA_NDVI <- raster(file.path(veg_indices_output_folder,'2021_MCRA_2_NDVI.tif'))
-MCRA_NDVI_error <- raster(file.path(veg_indices_output_folder,'2021_MCRA_2_NDVI_error.tif'))
+MCRA_NDVI <- rast(file.path(veg_indices_output_folder,'2021_MCRA_2_NDVI.tif'))
+MCRA_NDVI_error <- rast(file.path(veg_indices_output_folder,'2021_MCRA_2_NDVI_error.tif'))
 ```
 
 And, finally, let's plot NDVI and NDVI error:
@@ -263,7 +276,6 @@ plot(MCRA_NDVI,main="2021_MCRA_2 NDVI")
 ``` {r plot-mcra-ndvi-error}
 plot(MCRA_NDVI_error,main="2021_MCRA_2 NDVI Error") 
 ```
-
 Looks good! Go ahead and test out this function on different data products, years, or sites on your own. Note that larger sites will take more time to download the data, and may require significant memory resources on your computer.
 
 Last but not least, change the timeout back to the original value:
