--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "syncID: e046a83d83f2042d8b40dea1b20fd6779\n",
-    "title: \"Read in and visualize hyperspectral data in Python\"\n",
+    "title: \"Read in and visualize hyperspectral data using functions in Python\"\n",
     "description: \"Learn to efficiently work with tiled NEON AOP hyperspectral data in Python using functions.\"\n",
     "dateCreated: 2017-06-19 \n",
     "authors: Bridget Hass\n",
