--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/ndvi-spectra-masks/calc_ndvi_extract_spectra.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/ndvi-spectra-masks/calc_ndvi_extract_spectra.ipynb
@@ -28,7 +28,8 @@
    "source": [
     "In this tutorial, we will calculate the Normalized Difference Vegetation Index (NDVI) using Python functions.\n",
     "\n",
-    "This tutorial uses the Level 3 Spectrometer Surface mosaicked or tiled NEON data product, \n",
+    "This tutorial uses the Level 3<a href=\"https://data.neonscience.org/data-products/DP3.30006.001\" target=\"_blank\">Spectrometer orthorectified surface directional reflectance - mosaic</a>. \n",
+    "\n",
     "\n",
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
