fix code link and first sentence

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/plot-spectral-signature/plot_spectral_signatures.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/plot-spectral-signature/plot_spectral_signatures.ipynb
@@ -16,7 +16,7 @@
     "topics: hyperspectral-remote-sensing, HDF5, remote-sensing\n",
     "languagesTool: Python\n",
     "dataProduct: DP3.30006.001\n",
-    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/plot-spectral-signature/plot-spectral_signatures.ipynb\n",
+    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/plot-spectral-signature/plot_spectral_signatures.ipynb\n",
     "tutorialSeries: intro-hsi-tiles-py-series\n",
     "urlTitle: plot-spec-sig\n",
     "---"
@@ -28,7 +28,7 @@
    "source": [
     "In this tutorial, we will learn how to extract and plot a spectral profile from a single pixel of a reflectance band in a NEON hyperspectral HDF5 file. \n",
     "\n",
-    "This tutorial works with the Level 3 <a href=\"https://data.neonscience.org/data-products/DP3.30006.001\" target=\"_blank\">Spectrometer orthorectified surface directional reflectance - mosaic</a>. \n",
+    "This tutorial works with the Level 3 <a href=\"https://data.neonscience.org/data-products/DP3.30006.001\" target=\"_blank\">Spectrometer orthorectified surface directional reflectance - mosaic</a> data product. \n",
     "\n",
     "\n",
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
