--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/plot-spectral-signature/plot_spectral_signatures.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/plot-spectral-signature/plot_spectral_signatures.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "syncID: c91d556c8fad4570a33a1aaa550a561d\n",
-    "title: \"Plot a Spectral Signature in Python - Tiled Data\"\n",
+    "title: \"Plot a Spectral Signature from Reflectance Data in Python\"\n",
     "description: \"Learn how to extract and plot a spectral profile from a single pixel of a reflectance band using NEON tiled hyperspectral data.\" \n",
     "dateCreated: 2018-07-04 \n",
     "authors: Bridget Hass\n",
@@ -18,7 +18,7 @@
     "dataProduct: DP3.30006.001\n",
     "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/plot-spectral-signature/plot_spectral_signatures.ipynb\n",
     "tutorialSeries: intro-hsi-tiles-py-series\n",
-    "urlTitle: plot-spec-sig\n",
+    "urlTitle: plot-refl-spectra-py\n",
     "---"
    ]
   },
