--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/plot-spectral-signature/plot_spectral_signatures.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/plot-spectral-signature/plot_spectral_signatures.ipynb
@@ -73,7 +73,7 @@
     "<figure>\n",
     "\t<a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/vegetationSpectra_Roman2016.png\">\n",
     "\t<img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/vegetationSpectra_Roman2016.png\"></a>\n",
-    "\t<figcaption> Spectral signature of vegetation. Source: Mark Elowitz \n",
+    "\t<figcaption> Spectral signature of vegetation. Source: Roman, Anamaria & Ursu, Tudor. (2016). Multispectral satellite imagery and airborne laser scanning techniques for the detection of archaeological vegetation marks. \n",
     "\t</figcaption>\n",
     "</figure>\n",
     "\n",
