update intro wording

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "In this tutorial, you will learn how to efficiently read in hdf5 data and metadata, plot a single band and rgb band combinations of a reflectance data tile using Python functions created for working with and visualizing NEON AOP hyperspectral data.\n",
     "\n",
-    "This tutorial uses the Level 3 <a href=\"https://data.neonscience.org/data-products/DP3.30006.001\" target=\"_blank\">Spectrometer orthorectified surface directional reflectance - mosaic</a>. \n",
+    "This tutorial uses the Level 3 <a href=\"https://data.neonscience.org/data-products/DP3.30006.001\" target=\"_blank\">Spectrometer orthorectified surface directional reflectance - mosaic</a> data product. \n",
     "\n",
     "\n",
     "<div id=\"ds-ojectives\" markdown=\"1\">\n",
@@ -51,7 +51,7 @@
     "\n",
     "Data and additional scripts required for this lesson are downloaded programmatically as part of the tutorial.\n",
     "\n",
-    "The LiDAR and imagery data used to create this raster teaching data subset were collected over NEON's\n",
+    "The data used in this lesson were collected over NEON's\n",
     "<a href=\"https://www.neonscience.org/field-sites/dsny\" target=\"_blank\">Disney Wilderness Preserve (DSNY)</a> field site and processed at NEON headquarters.\n",
     "\n",
     "The dataset can also be downloaded from the <a href=\"http://data.neonscience.org\" target=\"_blank\">NEON Data Portal</a>.\n",
