minor annotation updates to ipynb

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/ndvi-spectra-masks/calc_ndvi_extract_spectra.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/ndvi-spectra-masks/calc_ndvi_extract_spectra.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "In this tutorial, we will calculate the Normalized Difference Vegetation Index (NDVI) using Python functions.\n",
     "\n",
-    "This tutorial uses the Level 3<a href=\"https://data.neonscience.org/data-products/DP3.30006.001\" target=\"_blank\">Spectrometer orthorectified surface directional reflectance - mosaic</a>. \n",
+    "This tutorial works with the Level 3 <a href=\"https://data.neonscience.org/data-products/DP3.30006.001\" target=\"_blank\">Spectrometer orthorectified surface directional reflectance - mosaic</a> data product. \n",
     "\n",
     "\n",
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
@@ -37,8 +37,7 @@
     "After completing this tutorial, you will be able to:\n",
     "\n",
     "* Calculate NDVI from hyperspectral data in Python.\n",
-    "* \n",
-    "Calculate the mean spectr of all pixels whose NDVI is greater than or less than a specified value.I\n",
+    "* Calculate the mean spectra of all pixels whose NDVI is greater than or less than a specified value.\n",
     "\n",
     "### Install Python Packages\n",
     "\n",
@@ -143,13 +142,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# define the data_url to point to the cloud storage location of the the hyperspectral hdf5 data file\n",
-    "data_url = \"https://storage.googleapis.com/neon-aop-products/2021/FullSite/D02/2021_SERC_5/L3/Spectrometer/Reflectance/NEON_D02_SERC_DP3_368000_4306000_reflectance.h5\""
+    "Define the `data_url` to point to the cloud storage location of the the hyperspectral hdf5 data file"
    ]
   },
   {
@@ -158,7 +154,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# download the h5 data and display how much time it took to download (uncomment 1st and 3rd lines)\n",
+    "data_url = \"https://storage.googleapis.com/neon-aop-products/2021/FullSite/D02/2021_SERC_5/L3/Spectrometer/Reflectance/NEON_D02_SERC_DP3_368000_4306000_reflectance.h5\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download the h5 data. You can optionally uncomment the 1st and 3rd lines to display how much time it took to download. This can take a few minutes because it is a fairly large file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# start_time = time.time()\n",
     "download_url(data_url,'.\\data')\n",
     "# print(\"--- It took %s seconds to download the data ---\" % round((time.time() - start_time),1))"
@@ -205,7 +216,6 @@
     }
    ],
    "source": [
-    "# Note you will need to update this filepath for your local machine\n",
     "serc_refl, serc_refl_md, wavelengths = neon_hs.aop_h5refl2array(h5_tile,'Reflectance')"
    ]
   },
