re-arrange intro section, fix link to BRDF figure

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -23,6 +23,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -30,16 +31,10 @@
     "\n",
     "In Spring 2024, AOP started producing revised (**.002**) spectrometer data products, which incorporate Bidirectional Reflectance Distribution Function (BRDF) and topographic corrections. Airborne hyperspectral data acquired in 2022 and 2023 are being processed with these corrections, and downstream Level 2 and Level 3 derived spectrometer data products (eg. vegetation and water indices, fPAR, LAI, etc.) are now generated from this bidirectional (BRDF-corrected) reflectance data. The L1 directional reflectance data will still be availble under the original **.001** revision # (<a href=\"https://data.neonscience.org/data-products/DP1.30006.001\" target=\"_blank\">DP3.30006.001</a>). Eventually, all previous years of data (2013-2021) will also be re-processed to apply the BRDF and topographic corrections. Updates on this progress will be posted as Data Notifications on the NEON Data Portal.\n",
     "\n",
-    "### BRDF Correction\n",
     "\n",
-    "<figure>\n",
-    "    <a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/BRDFcorrection.PNG\">\n",
-    "    <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-generalBRDFcorrection.PNG\"></a>\n",
-    "    <figcaption> Example dataset showing the a. original and b. BRDF-corrected datasets at the NEON CPER site; c. shows the difference in RMSE between the data processed with and without the BRDF correction.  \n",
-    "    </figcaption>\n",
-    "</figure>\n",
     "\n",
-    "The new bidirectional data includes some slight changes to the H5 contents, including some additional fields specific to the BRDF corrections. This tutorial outlines the major differences and highlights information you may want to incorporate when working with this revised data product. The tutorial also covers fundamental steps of reading in and exploring the HDF5 (h5) format that the reflectance data is delivered in. You will develop skills to explore and visualize the spectral data, and learn to make some functions for streamlining this process.\n",
+    "The new bidirectional data includes some slight changes to the H5 contents, including some additional fields specific to the BRDF corrections. This tutorial outlines the major differences and highlights information you may want to incorporate when working with this revised data product. The tutorial also covers fundamental steps of reading in and exploring the HDF5 (h5) format that the reflectance data is delivered in. You will develop skills to explore and visualize the spectral data, and learn to make some functions for streamlining this process\n",
+    ".\n",
     "\n",
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "    \n",
@@ -85,13 +80,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hyperspectral remote sensing data is a useful tool for measuring changes to our environment at the Earth’s surface. In this tutorial we explore how to extract information from a tile (1000m x 1000m x 426 bands) of NEON AOP orthorectified surface reflectance data, stored in hdf5 format. For more information on this data product, refer to the <a href=\"http://data.neonscience.org/data-products/DP3.30006.001\" target=\"_blank\">NEON Data Product Catalog</a>."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## BRDF Correction\n",
+    "\n",
+    "Objects look different when viewed from different angles, and when illuminated from different directions. The BRDF (units sr-1) describes the directional dependence of the reflected energy of a target as a function of illumination and viewing geometry. It also depends on the wavelength and structural and optical properties of the surface. In short, the BRDF correction helps to improve continuity in brightness levels between flightlines, and helps minimize the view and illumination angle effects.\n",
+    "\n",
+    "<figure>\n",
+    "    <a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/BRDFcorrection.PNG\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/BRDFcorrection.PNG\"></a>\n",
+    "    <figcaption> Example dataset showing the a. original and b. BRDF-corrected datasets at the NEON CPER site; c. shows the difference in RMSE between the data processed with and without the BRDF correction.  \n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
     "## Changes to Bidirectional Reflectance HDF5 Files\n",
     "\n",
     "If you're working with the bidirectional reflectance data for the first time, we encourage you to start by exploring the HDF5 file in HDFView, a free software that can be downloaded from the <a href=\"https://www.hdfgroup.org/downloads/hdfview/\" target=\"_blank\">HDF Group Download Page</a>. This provides a more interactive way to view the contents of the hdf5 files. The figure below shows a DP3.30006.002 and DP3.30006.001 file in HDFView for comparison.\n",
