add markdown and figs

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -620,11 +620,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The mosaicking routine which generates the tiled reflectance data first selects the cloud-free pixels, then chooses the nadir-most pixels. In a single tile, there may be different cloud conditions represented, as shown in this example.\n",
+    "\n",
     "## Acquisition Date\n",
     "\n",
     "You may be interested in the date at which a given pixel was acquired, in order to link the data with ground data, or satellite data, for example. Previously, the acquisition date had to be determined from the `Data_Selection_Index` dataset. The acquisition date is now being provided more directly (and the Data Selection Index is still provided, and is useful if you would like to pull more detail than just the date). This Data Selection Index links each pixel with the flight log that was used to generate that pixel. \n",
     "\n",
-    "First let's see the unique flight dates that are represented in this tile:"
+    "You can see the unique flight dates that are represented in this tile as follows:"
    ]
   },
   {
@@ -643,56 +645,6 @@
    "source": [
     "liro_flight_dates = anc_image_dict['Acqusition_Date']\n",
     "print(f'Flight dates in this tile: {np.unique(liro_flight_dates[()])}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The code below plots the acquisition date for this LIRO tile: (LEAVE THIS OUT SINCE IT'S PRETTY SIMILAR TO THE WEATHER)?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```python\n",
-    "# import matplotlib\n",
-    "import matplotlib.patches as mpatches\n",
-    "# import matplotlib.colormaps as mcol\n",
-    "# from matplotlib.cm import _colormaps as colormaps \n",
-    "\n",
-    "flight_dates = anc_image_dict['Acqusition_Date']\n",
-    "\n",
-    "# Find the unique values in the data (ignoring nan values)\n",
-    "unique_values = np.unique(data[~np.isnan(data)])\n",
-    "\n",
-    "# Create a colormap with a different color for each unique value\n",
-    "cmap = plt.cm.get_cmap('viridis', len(unique_values))\n",
-    "# cmap = colormaps.get_cmap('viridis')\n",
-    "\n",
-    "# Create a normalize object the describes the limits of each color\n",
-    "norm = plt.cm.colors.BoundaryNorm(unique_values, cmap.N)\n",
-    "\n",
-    "# Plot the data\n",
-    "plt.imshow(flight_dates, extent=map_info['extent'], cmap=cmap, norm=norm)\n",
-    "ax = plt.gca()\n",
-    "ax.ticklabel_format(useOffset=False, style='plain'); #do not use scientific notation for ticklabels\n",
-    "rotatexlabels = plt.setp(ax.get_xticklabels(),rotation=90); #rotate x tick labels 90 degrees\n",
-    "\n",
-    "# Create legend\n",
-    "patches = [mpatches.Patch(color=cmap(norm(value)), label=value) for value in unique_values]\n",
-    "plt.legend(handles=patches, bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
-    "\n",
-    "plt.show()\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The mosaicking routine which generates the tiled reflectance data first selects the cloud-free pixels, then chooses the nadir-most pixels. In a single tile, there may be data from multiple flight dates, depending on cloud conditions and other factors."
    ]
   },
   {
