fix more typos and add another sentence to older refl python intro series

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -61,7 +61,9 @@
     "\n",
     "**Download the LIRO Directional Reflectance Tile:** <a href=\"https://storage.googleapis.com/neon-aop-provisional-products/2022/FullSite/D05/2022_LIRO_3/L3/Spectrometer/Reflectance/NEON_D05_LIRO_DP3_290000_5097000_bidirectional_reflectance.h5\" class=\"link--button link--arrow\">NEON_D05_LIRO_DP3_290000_5097000_reflectance.h5</a>\n",
     "\n",
-    "### Additional Resources\n",
+    "### Additional Resource\n",
+    "If you are new to NEON hyperspectral reflectance data, we recommend going through the tutorial series below, or at least the first lesson. This series uses the directional reflectance data (DP3.30006.001), but the same principles apply.\n",
+    "s- \n",
     "\n",
     "<a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/introduction-hyperspectral-remote-sensing-data-python\" target=\"_blank\">Introduction to Hyperspectral Remote Sensing Data in Python</a>\n",
     "\n",
