remove unneeded code chunk and obsolete reference to ls_dataset

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -317,30 +317,7 @@
     "- `Reflectance/Metadata/Ancillary_Imagery/Acqusition_Date`\n",
     "- `Reflectance/Metadata/Ancillary_Imagery/Weather_Quality_Indicator`\n",
     "- `Reflectance/Metadata/Logs/L004-1_20220623/BRDF_COEFFS_JSON_for_Hytools`\n",
-    "- `Reflectance/Metadata/Logs/L004-1_20220623/BRDF_Config_JSON_for_Hytools`\n",
-    "\n",
-    "We can also display the name, shape, and type of each of these datasets using the `ls_dataset` function defined below, which is also called with the `visititems` method: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "site name: LIRO\n",
-      "product name: Reflectance\n"
-     ]
-    }
-   ],
-   "source": [
-    "site_name = str(list(h5_file.items())).split(\"'\")[1]\n",
-    "print('site name:',site_name)\n",
-    "prod_name = str(list(h5_file[site_name].items())).split(\"'\")[1] # this is the Reflectance\n",
-    "print('product name:',prod_name)"
+    "- `Reflectance/Metadata/Logs/L004-1_20220623/BRDF_Config_JSON_for_Hytools`\n"
    ]
   },
   {
