--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "<a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/introduction-hyperspectral-remote-sensing-data-python\" target=\"_blank\">Introduction to Hyperspectral Remote Sensing Data in Python</a>\n",
     "\n",
-    "More details about the surface directional reflectance data product can be found on the data product page, linked below.\n",
+    "More details about the surfacbie directional reflectance data product can be found on the data product page, linked below.\n",
     "- <a href=\"https://data.neonscience.org/data-products/DP3.30006.002\" target=\"_blank\">Spectrometer orthorectified surface bidirectional reflectance - mosaic</a>\n",
     "\r",
     "In addition, NEON'S Airborne Observation Platform provides Algorithm Theoretical Basis Documents (ATBDs) for all of their data products. Please refer to the ATBDs below for a more in-depth understanding  ofthe reflectance daad.\r",
