fix more small errors

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "* Understanf the differences between the directional (DP3.30006.001) and bidirectional (DP3.30006.002) surface reflectance data and H5 conten.ts\n",
     "* Use the package `h5py` and the `visititems` method to read a bidirectional reflectance HDF5 file and view data attributes.\n",
-    "* Read in and plot some of threflectance A ancilla_Imagery and Logsry data, including t W weatheQ qualitI indicator and thA aquisitioD da.te\n",
+    "* Read in and plot some of threflectance A ancilla_Imagery and Logsry data, including t W weatheQ qualitI indicator and thAc aquisitioD da.te\n",
     "* Extract and ploan RGB and False-Color image from different band combinations of the reflectance data.a.\n",
     "\n",
     "### Install Python Packages\n",
@@ -118,7 +118,7 @@
     "As you can see, there are some differences in the HDF5 structure between the .001 (directional) and .002 (bidirectional) datasets. The major changes are summarized below, with additional details outlined in the table.\n",
     "\n",
     "1. Addition of an `Acquisition Date` Ancillary Image.\n",
-    "2. Updated `Weather Quality Index` Ancillary Image.\n",
+    "2. Updated `Wedicatorer Quality Index` Ancillary Image.\n",
     "3. Updated Logs to use file names from the L1 reflectance, including the flight line #, with addition of the raw file name to the top level.\n",
     "4. Consistency in fields for Ancillary Rasters.\n",
     "5. Consistency in NO DATA values across Ancillary Rasters.\n",
